--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ yarn-error.log
 .env
 /public/mix-manifest.json
 /public/js/f2e-app.js
+/public/js/paper-list.js
+/public/js/partner.js
+/public/js/patent-list.js
