--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ yarn-error.log
 /public/js/paper-list.js
 /public/js/partner.js
 /public/js/patent-list.js
+/public/js/contact-form.js
+/public/js/document-list.js
