page builder methods

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "element-ui": "^2.4.7",
     "gentelella": "^1.4.0",
     "grapesjs": "^0.15.3",
+    "grapesjs-blocks-bootstrap4": "^0.1.16",
     "jquery-bar-rating": "^1.2.2",
     "jquery-lazyload": "^1.9.7",
     "jquery-ui": "^1.12.1",
